# agent-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/scripts/: generate-skills-table.sh  sync-agent-rules.sh  validate-rules.sh  validate-skill.sh
.github/workflows/: update-readme.yml  validate-pr.yml
builder-apps/claude-agent/: README.md  pyproject.toml
builder-apps/claude-agent/client/: index.html  package-lock.json  package.json
builder-apps/claude-agent/client/src/: App.tsx  index.css
builder-apps/claude-agent/client/src/components/: ChatMessage.tsx  DatabaseSelector.tsx  ThinkingBlock.tsx
builder-apps/claude-agent/client/src/services/: api.ts
builder-apps/claude-agent/client/src/types/: agent.ts
builder-apps/claude-agent/scripts/: dev.sh  setup.sh
builder-apps/claude-agent/server/: __init__.py  agent.py  config.py  main.py  models.py  skills.py  snowflake.py
builder-apps/cortex-agent/: .gitignore  README.md  requirements.txt  setup.sql
cortex-ai-functions/: SKILL.md
dynamic-tables/: SKILL.md
etl-replatform-deploy/: SKILL.md
general-skills/: README.md
snowflake-best-practices/: AGENTS.md  SKILL.md
snowflake-best-practices/rules/: _template.md  cluster-key-cardinality.md  cluster-key-filter-alignment.md  (+23 more)
snowflake-builder-app/: README.md  pyproject.toml  requirements.txt
snowflake-postgres/: SKILL.md
snowflake-skills/: README.md  install_skills.sh
snowpark-python/: SKILL.md
snowpipe-streaming-java/: README.md
snowpipe-streaming-python/: README.md
ssis-to-dbt-replatform-migration/: README.md  SKILL.md
(+38 files in other folders)
